add css styles to vendor

--- a/VendorTracker/Views/Home/Index.cshtml
+++ b/VendorTracker/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
-<h1>Vendor and Order Tracker</h1>
-<h3><a href='/vendors'>View vendors</a></h3>
-<h3><a href='/vendors/new'>Add a new vendor</a></h3>
+<h1 class = "h1">Welcom to Pierr Bakery</h1>
+<h3 class = "viewVendors"><a href='/vendors' >View vendors</a></h3>
+<h3 class = "viewVendors"><a href='/vendors/new'>Add a new vendor</a></h3>
 @{
   Layout = "_Layout";
 }
