--- a/VendorTracker/Views/Orders/New.cshtml
+++ b/VendorTracker/Views/Orders/New.cshtml
@@ -1,15 +1,34 @@
-<h1>Add a new order to @Model.Name</h1>
+<h2>Add a new order to @Model.Name</h>
 <div class="container">
-<form action="/vendors/@Model.Id/orders" method="post">
-  <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
-  <label for="orderTitle">Order Title</label>
-  <input id="orderTitle" name="orderTitle" type="text">
-  <label for="orderDescription">Order Description</label>
-  <input id="orderDescription" name="orderDescription" type="text">
-  <label for="orderPrice">Order Price</label>
-  <input id="orderPrice" name="orderPrice" type="text">
-  <label for="orderDate">Order Date</label>
-  <input id="orderDate" name="orderDate" type="text">
-  <button type='submit'>Add order</button>
-</form>
+  <form action="/vendors/@Model.Id/orders" method="post">
+    <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
+    <div class = "row">
+      <div class="col-2">
+        <label for="orderTitle">Order Title</label>
+        <input id="orderTitle" name="orderTitle" type="text">
+      </div>
+    </div>
+    <div class = "row">
+      <div class="col-4">
+        <label for="orderDescription">Order Description</label>
+        <input id="orderDescription" name="orderDescription" type="text">
+      </div>
+    </div>
+    <div class = "row">
+      <div class="col-4">
+        <label for="orderPrice">Order Price</label>
+        <input id="orderPrice" name="orderPrice" type="text">
+      </div>
+    </div>    
+    <div class = "row">
+      <div class="col-4">
+        <label for="orderDate">Order Date</label>
+        <input id="orderDate" name="orderDate" type="text">
+      </div>
+    </div>    
+    <button type='submit'>Add order</button>
+  </form>
 </div>
+@{
+  Layout = "_Layout";
+}
