add option to clear all vendors

--- a/VendorTracker/Views/Orders/DeleteAll.cshtml
+++ b/VendorTracker/Views/Orders/DeleteAll.cshtml
@@ -1,5 +1,5 @@
-<h1>Your list has been cleared!</h1>
-<p><a href="/orders">Back to list.</a></p>
+<h1 class="delete">Your list has been cleared!</h1>
+<p><a href='/'>Back home</a></p>
 @{
   Layout = "_Layout";
 }
