--- a/VendorTracker/Views/Orders/New.cshtml
+++ b/VendorTracker/Views/Orders/New.cshtml
@@ -1,5 +1,5 @@
-<h2>Add a new order to @Model.Name</h>
 <div class="container">
+  <h3>Add a new order to @Model.Name</h3>
   <form action="/vendors/@Model.Id/orders" method="post">
     <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
     <div class = "row">
